--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,5 @@
 <Mod>
   <PreloadContent>True</PreloadContent>
   <NoCompilation>True</NoCompilation>
+  <WorkshopID>2508093243</WorkshopID>
 </Mod>
