--- a/SafeZone/SafeZone.csproj
+++ b/SafeZone/SafeZone.csproj
@@ -6,10 +6,22 @@
     <DebugType>full</DebugType>
     <LangVersion>latest</LangVersion>
     <OutputPath>Output\</OutputPath>
+    <Version>0.0.0.10</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <DefineConstants>TRACE</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <DefineConstants>TRACE;SHOW_TEST_LOG</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="1.2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="DuckGame">
       <HintPath>..\ThirdParty\DuckGame.exe</HintPath>
       <Private>false</Private>
